added registration user

--- a/testMVC/Views/Account/Register.cshtml
+++ b/testMVC/Views/Account/Register.cshtml
@@ -8,9 +8,14 @@
         <span asp-validation-for="Email"></span>
     </div>
     <div>
-        <label asp-for="Year"></label><br />
-        <input asp-for="Year" />
-        <span asp-validation-for="Year"></span>
+        <label asp-for="Name"></label><br />
+        <input asp-for="Name" />
+        <span asp-validation-for="Name"></span>
+    </div>
+    <div>
+        <label asp-for="SurName"></label><br />
+        <input asp-for="SurName" />
+        <span asp-validation-for="SurName"></span>
     </div>
     <div>
         <label asp-for="Password"></label><br />
