--- a/testMVC/Views/Home/Index.cshtml
+++ b/testMVC/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
 }
 else
 {
-    <a asp-controller="Account" asp-action="Login">Вход</a>
-    <a asp-controller="Account" asp-action="Register">Регистрация</a>
+    <p><a asp-controller="Account" asp-action="Login">Вход</a></p>
+    <p><a asp-controller="Account" asp-action="Register">Регистрация</a></p>
 }
