--- a/testMVC/Views/Users/Index.cshtml
+++ b/testMVC/Views/Users/Index.cshtml
@@ -2,6 +2,7 @@
 
 <table class="table">
     <tr>
+        <th>Удалить пользователя</th>
         <th>Имя</th>
         <th>Фамилия</th>
         <th>Емеил</th>
@@ -14,6 +15,10 @@
     @foreach (var user in Model.Users)
     {
 <tr>
+    <td><form method="Post" asp-controller="Users" asp-action="DeleteUser">
+    <input type="hidden" name="userEmail" value="@user.Email" />
+    <input class="btn btn-danger" type="submit" value="Удалить" />
+</form></td>
     <td>@user.Name</td>
     <td>@user.SurName</td>
     <td>@user.Email</td>
