added view for display categories and add new

--- a/testMVC/Views/Categories/Index.cshtml
+++ b/testMVC/Views/Categories/Index.cshtml
@@ -12,3 +12,10 @@
     }
 
 </table>
+@if (this.User.IsInRole("Admin"))
+{
+    <form method="get" asp-controller="Categories" asp-action="Create">
+        <input class="btn btn-success" type="submit" value="Создать" />
+    </form>
+}
+    
