--- a/testMVC/Views/Products/_ProductPartialView.cshtml
+++ b/testMVC/Views/Products/_ProductPartialView.cshtml
@@ -2,7 +2,30 @@
 <td> @Model.Name</td>
 <td> @Model.Price</td>
 <td>
-    <form method="post" asp-controller="Products" asp-action="Buy">
-        <input class="btn btn-info" type="submit" value="Купить" />
-    </form>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Купить
+    </button>
 </td>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Done</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                  @Model.Name добавлен в корзину
+            </div>
+            <div class="modal-footer">
+                <form method="post" asp-controller="Products" asp-action="Buy">
+                    <button type="submit" class="btn btn-secondary">Хорошо</button>
+                </form>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Удалить</button>
+            </div>
+        </div>
+    </div>
+</div>
