--- a/testMVC/Views/Shared/_Layout.cshtml
+++ b/testMVC/Views/Shared/_Layout.cshtml
@@ -52,6 +52,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Basket" asp-action="Index">Корзина</a>
+                        </li>
 
                     </ul>
                 </div>
