added data access layer

--- a/testMVC/Views/Basket/Index.cshtml
+++ b/testMVC/Views/Basket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<testMVC.Models.Product>
+﻿@model IEnumerable<DAL.Entities.Product>
 <h3> Ваша корзина </h3>
 <table class="table">
     <tr>
