refactoring basket controller

--- a/testMVC/Views/Basket/Index.cshtml
+++ b/testMVC/Views/Basket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BLL.DTO.ProductDTO>
+﻿@model IEnumerable<testMVC.ViewModels.ProductViewModel>
 <h3> Ваша корзина </h3>
 <table class="table">
     <tr>
