--- a/testMVC/Views/Products/_ProductPartialView.cshtml
+++ b/testMVC/Views/Products/_ProductPartialView.cshtml
@@ -1,4 +1,4 @@
-﻿@model BLL.DTO.ProductDTO
+﻿@model testMVC.ViewModels.ProductForDisplayViewModel
 <td> @Model.Name</td>
 <td> @Model.Price</td>
 <td>
