--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -1,21 +1,59 @@
 ﻿@model IEnumerable<testMVC.ViewModels.ProductForDisplayViewModel>
-
-<table class="table">
-    <tr>
-        <th>Категории</th>
-        <th>Цена</th>
-    </tr>
-    @foreach (var product in Model)
-    {
-        <tr>
-            @await Html.PartialAsync("_ProductPartialView", product)
-        </tr>
-    }
-
+    <form method="post">
+        <table>
+            <tr>
+                <td>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">$</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Price from" aria-label="Amount (to the nearest dollar)" name="PriceFrom">
+                    </div>
+                </td>
+                <td>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">$</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Price to" aria-label="Amount (to the nearest dollar)" name="PriceTo">
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <input type="radio" id="sort1" name="sort" value="up" aria-label="Radio button for following text input">
+                            </div>
+                            <input type="text" class="form-control" aria-label="Text input with radio button" value="По возрастанию" disabled>
+                            <div class="input-group-text">
+                                <input type="radio" id="sort2" name="sort" value="down" aria-label="Radio button for following text input">
+                            </div>
+                            <input type="text" class="form-control" aria-label="Text input with radio button" value="По убыванию" disabled>
+                        </div>  
+                     </div>
+                </td>
+            </tr>
 </table>
-@if (this.User.IsInRole("Admin"))
-{
-    <form method="get" asp-controller="Products" asp-action="Create">
-        <input class="btn btn-success" type="submit" value="Создать" />
+        <input type="submit" value="Применить" />
     </form>
-}
+        <table class="table">
+            <tr>
+                <th>Категории</th>
+                <th>Цена</th>
+            </tr>
+            @foreach (var product in Model)
+            {
+                <tr>
+                    @await Html.PartialAsync("_ProductPartialView", product)
+                </tr>
+            }
+
+        </table>
+        @if (this.User.IsInRole("Admin"))
+        {
+            <form method="get" asp-controller="Products" asp-action="Create">
+                <input class="btn btn-success" type="submit" value="Создать" />
+            </form>
+        }
