added logic for sorting

--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -24,11 +24,11 @@
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
-                                <input type="radio" id="sort1" name="sort" value="up" aria-label="Radio button for following text input">
+                                <input type="radio" id="sort1" name="sort" value="0" aria-label="Radio button for following text input">
                             </div>
                             <input type="text" class="form-control" aria-label="Text input with radio button" value="По возрастанию" disabled>
                             <div class="input-group-text">
-                                <input type="radio" id="sort2" name="sort" value="down" aria-label="Radio button for following text input">
+                                <input type="radio" id="sort2" name="sort" value="1" aria-label="Radio button for following text input">
                             </div>
                             <input type="text" class="form-control" aria-label="Text input with radio button" value="По убыванию" disabled>
                         </div>  
