--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -41,7 +41,7 @@
         <table class="table">
             <tr>
                 <th>Категории</th>
-                <th>Цена</th>
+                <th colspan="2">Цена</th>
             </tr>
             @foreach (var product in Model)
             {
