--- a/testMVC/Views/Basket/Index.cshtml
+++ b/testMVC/Views/Basket/Index.cshtml
@@ -1,17 +1,23 @@
-﻿@model IEnumerable<testMVC.ViewModels.ProductViewModel>
+﻿@model IEnumerable<testMVC.ViewModels.ProductInBasketViewModel>
 <h3> Ваша корзина </h3>
 <table class="table">
     <tr>
         <th>Категории</th>
-        <th>Цена</th>
+        <th colspan="2">Цена</th>
     </tr>
     @foreach (var product in Model)
     {
         <tr>
             <td> @product.Name</td>
             <td> @product.Price</td>
+            <td>
+                <form method="post" asp-controller="Basket" asp-action="delete">
+                    <input type="hidden" name="productId" value=@product.Id />
+                    <input class="btn btn-danger" type="submit" value="Удалить из корзины" />
+                </form>
+             </td>
         </tr>
     }
-<tr><td colspan="2">Итоговая сумма: @ViewBag.TotalAmount</td></tr>
+<tr><td colspan="3">Итоговая сумма: @ViewBag.TotalAmount</td></tr>
 
 </table>
