--- a/testMVC/Views/Categories/Index.cshtml
+++ b/testMVC/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<testMVC.ViewModels.CategoriesForDisplayViewModel>
+﻿@model IEnumerable<TestMVC.ViewModels.CategoriesForDisplayViewModel>
 
 <table class="table">
     <tr>
