--- a/testMVC/Views/Products/Create.cshtml
+++ b/testMVC/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model testMVC.ViewModels.ProductViewModel
+﻿@model TestMVC.ViewModels.ProductViewModel
 
     <form method="Post" asp-controller="Products" asp-action="Create">
         <div asp-validation-summary="ModelOnly"></div>
