--- a/testMVC/Views/Users/Index.cshtml
+++ b/testMVC/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model testMVC.ViewModels.ChangeUserRoleViewModel;
+﻿@model TestMVC.ViewModels.ChangeUserRoleViewModel;
 
 <table class="table">
     <tr>
