--- a/testMVC/Views/Account/Register.cshtml
+++ b/testMVC/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model CustomIdentityApp.ViewModels.RegisterViewModel
+﻿@model TestMVC.ViewModels.RegisterViewModel
     <style>
         .marginForDiv {
             margin-top: 10px;
