--- a/testMVC/Views/Categories/Create.cshtml
+++ b/testMVC/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model testMVC.ViewModels.CategoriesViewModel
+﻿@model TestMVC.ViewModels.CategoriesViewModel
 
 <form method="Post" asp-controller="Categories" asp-action="Create">
     <div asp-validation-summary="ModelOnly"></div>
