--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<testMVC.ViewModels.ProductForDisplayViewModel>
+﻿@model IEnumerable<TestMVC.ViewModels.ProductForDisplayViewModel>
     <form method="post">
         <table>
             <tr>
@@ -7,7 +7,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">₴</span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Price from" aria-label="Amount (to the nearest dollar)" name="PriceFrom">
+                        <input type="text" class="form-control" placeholder="Price from" name="priceFrom">
                     </div>
                 </td>
                 <td>
@@ -15,7 +15,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">₴</span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Price to" aria-label="Amount (to the nearest dollar)" name="PriceTo">
+                        <input type="text" class="form-control" placeholder="Price to" name="priceTo">
                     </div>
                 </td>
             </tr>
