--- a/testMVC/Views/Role/Create.cshtml
+++ b/testMVC/Views/Role/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model testMVC.ViewModels.RoleViewModel
+﻿@model TestMVC.ViewModels.RoleViewModel
 
     <form method="Post" asp-controller="Role" asp-action="Create">
         <div asp-validation-summary="ModelOnly"></div>
