--- a/testMVC/Views/Home/Index.cshtml
+++ b/testMVC/Views/Home/Index.cshtml
@@ -2,16 +2,18 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<table class="table">
-    <tr>
-        <th>Товары</th>
-        <th colspan="2">Цена</th>
-    </tr>
-    @foreach (var product in Model)
-    {
+@{int countProductInRow = 4;}
+    <table class="table">
+        @for (int i = 0; i <= @Model.Count() / countProductInRow; i++)
+        {
         <tr>
-            @await Html.PartialAsync("/Views/Products/_ProductPartialView.cshtml", product)
+            @for (int j = 0; j < countProductInRow; j++)
+            {
+                @if ((i * countProductInRow + j) < Model.Count())
+                {
+                    @await Html.PartialAsync("_ProductPartialView.cshtml", Model.ToArray()[(i * countProductInRow + j)])
+                }
+            }
         </tr>
-    }
-
-</table>
+        }
+    </table>
