changed product model for long description and image

--- a/testMVC/Views/Home/_ProductPartialView.cshtml
+++ b/testMVC/Views/Home/_ProductPartialView.cshtml
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
 <td>
     <div class="card" style="width: 16rem; height: 22rem;">
-        <img class="card-img-top" src="...">
+        <img class="card-img-top" src="@Url.Content(@Model.ImageName)">
         <div class="card-body">
             <h5 class="card-title oneLines">@Model.Name</h5>
             <p class="card-text threeLines">@Model.Description</p>
