--- a/testMVC/Views/Home/Index.cshtml
+++ b/testMVC/Views/Home/Index.cshtml
@@ -2,18 +2,26 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-@{int countProductInRow = 4;}
-    <table class="table">
-        @for (int i = 0; i <= @Model.Count() / countProductInRow; i++)
-        {
-        <tr>
-            @for (int j = 0; j < countProductInRow; j++)
-            {
-                @if ((i * countProductInRow + j) < Model.Count())
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-5">
+            @await Html.PartialAsync("_SortPartialView.cshtml")
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-2">
+            @await Html.PartialAsync("_FilterPartialView.cshtml")
+        </div>
+        <div class="col-10">
+            <div class="row">
+                @for (int i = 0; i < @Model.Count(); i++)
                 {
-                    @await Html.PartialAsync("_ProductPartialView.cshtml", Model.ToArray()[(i * countProductInRow + j)])
+                    <div class="col-lg-5 col-xl-4">
+                        @await Html.PartialAsync("_ProductPartialView.cshtml", Model.ToArray()[i])
+                    </div>
                 }
-            }
-        </tr>
-        }
-    </table>
+            </div>
+        </div>
+    </div>
+</div>
