image field for new category

--- a/testMVC/Views/Categories/Create.cshtml
+++ b/testMVC/Views/Categories/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TestMVC.ViewModels.CategoriesViewModel
 
-    <form method="Post" asp-controller="Categories" asp-action="Create">
+    <form method="Post" asp-controller="Categories" asp-action="Create" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly"></div>
         <div>
             <label asp-for="Name"></label><br />
@@ -11,6 +11,11 @@
             <label asp-for="Tag"></label><br />
             <input asp-for="Tag" />
             <span asp-validation-for="Tag"></span>
+        </div>
+        <div>
+            <label asp-for="File"></label><br />
+            <input type="file" class="form-control" asp-for="File" />
+            <span asp-validation-for="File"></span>
         </div>
         <div>
             <label asp-for="ParentCategory"></label><br />
