--- a/testMVC/Views/Categories/Index.cshtml
+++ b/testMVC/Views/Categories/Index.cshtml
@@ -1,20 +1,34 @@
 ﻿@model IEnumerable<TestMVC.ViewModels.CategoriesForDisplayViewModel>
+@{
+    ViewData["Title"] = "Categories Page";
+}
 
-<table class="table">
-    <tr>
-        <th>Категории</th>
-    </tr>
-    @foreach (var categories in Model)
-    {
-        <tr>
-            <td><a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index" asp-route-id="@categories.Tag" >@categories.Name</a></td>
-        </tr>
-    }
-
-</table>
 @if (this.User.IsInRole("Admin"))
 {
     <form method="get" asp-controller="Categories" asp-action="Create">
-        <input class="btn btn-success" type="submit" value="Создать" />
+        <input class="btn btn-success" type="submit" value="Create new category" />
     </form>
 }
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-5">
+            sort box
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-2">
+            filter box
+        </div>
+        <div class="col-10">
+            <div class="row">
+                @for (int i = 0; i < @Model.Count(); i++)
+                {
+                    <div class="col-lg-5 col-xl-4">
+                        @await Html.PartialAsync("_CategoryPartialView.cshtml", Model.ToArray()[i])
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
