--- a/testMVC/Views/Categories/Index.cshtml
+++ b/testMVC/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestMVC.ViewModels.CategoriesForDisplayViewModel>
+﻿@model TestMVC.ViewModels.PaginationCategoryViewModel
 @{
     ViewData["Title"] = "Categories Page";
 }
@@ -22,13 +22,29 @@
         </div>
         <div class="col-10">
             <div class="row">
-                @for (int i = 0; i < @Model.Count(); i++)
+                @for (int i = 0; i < @Model.CategoryList.Count(); i++)
                 {
                     <div class="col-lg-5 col-xl-4">
-                        @await Html.PartialAsync("_CategoryPartialView.cshtml", Model.ToArray()[i])
+                        @await Html.PartialAsync("_CategoryPartialView.cshtml", Model.CategoryList.ToArray()[i])
                     </div>
                 }
             </div>
+        </div>
+    </div>
+    @{int nextPage = Model.CurrentPage + 1;}
+    @{int previousPage = Model.CurrentPage - 1;}
+    <div class="row">
+        <div class="col">
+            <ul class="pagination justify-content-center">
+                @if (Model.HasPrevious)
+                {
+                    <li class="page-item"><a class="page-link" asp-controller="Categories" asp-action="Index" asp-route-page=@previousPage>Previous</a></li>
+                }
+                @if (Model.HasNext)
+                {
+                    <li class="page-item"><a class="page-link" asp-controller="Categories" asp-action="Index" asp-route-page=@nextPage>Next</a></li>
+                }
+            </ul>
         </div>
     </div>
 </div>
