--- a/testMVC/Views/Categories/Index.cshtml
+++ b/testMVC/Views/Categories/Index.cshtml
@@ -13,23 +13,16 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-5">
-            sort box
+            @await Html.PartialAsync("_SortPartialView.cshtml")
         </div>
     </div>
     <div class="row">
-        <div class="col-2">
-            filter box
-        </div>
-        <div class="col-10">
-            <div class="row">
-                @for (int i = 0; i < @Model.CategoryList.Count(); i++)
-                {
-                    <div class="col-lg-5 col-xl-4">
-                        @await Html.PartialAsync("_CategoryPartialView.cshtml", Model.CategoryList.ToArray()[i])
-                    </div>
-                }
+        @for (int i = 0; i < @Model.CategoryList.Count(); i++)
+        {
+            <div class="col-lg-5 col-xl-4">
+                @await Html.PartialAsync("_CategoryPartialView.cshtml", Model.CategoryList.ToArray()[i])
             </div>
-        </div>
+        }
     </div>
     @{int nextPage = Model.CurrentPage + 1;}
     @{int previousPage = Model.CurrentPage - 1;}
