save selected filter for category and show it on UI

--- a/testMVC/Views/Categories/Index.cshtml
+++ b/testMVC/Views/Categories/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-5">
-            @await Html.PartialAsync("_SortPartialView.cshtml")
+            @await Html.PartialAsync("_SortPartialView.cshtml", Model)
         </div>
     </div>
     <div class="row">
