--- a/testMVC/Views/Categories/_CategoryPartialView.cshtml
+++ b/testMVC/Views/Categories/_CategoryPartialView.cshtml
@@ -2,9 +2,16 @@
 
     <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index" asp-route-id="@Model.Tag">
         <div class="card" style="width: 16rem; height: 14rem;">
+            @if (this.User.IsInRole("Admin"))
+            {
+                <form method="get" asp-controller="Categories" asp-action="Edit" style="position : absolute; top:0; left: 0;">
+                    <input type="hidden" name="id" value="@Model.Id" />
+                    <input class="btn btn-info" type="submit" value="Edit" />
+                </form>
+            }
             <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.ImageInByte))">
             <div class="card-body">
                 <h5 class="card-title oneLines">@Model.Name</h5>
             </div>
         </div>
-    </a>
+</a>
