--- a/testMVC/Views/Categories/Edit.cshtml
+++ b/testMVC/Views/Categories/Edit.cshtml
@@ -1,37 +1,40 @@
 ﻿@model TestMVC.ViewModels.EditCategoriesViewModel
+@{
+    ViewData["Title"] = "Edit Category";
+}
 
-    <form method="Post" asp-controller="Categories" asp-action="Edit" enctype="multipart/form-data">
-        <input type="hidden" asp-for="Id" value="@Model.Id" />
-        <div asp-validation-summary="ModelOnly"></div>
-        <div>
-            <label asp-for="Name"></label><br />
-            <input asp-for="Name" value="@Model.Name" />
-            <span asp-validation-for="Name"></span>
-        </div>
-        <div>
-            <label asp-for="Tag"></label><br />
-            <input asp-for="Tag" value="@Model.Tag" />
-            <span asp-validation-for="Tag"></span>
-        </div>
-        <div>
-            <label asp-for="File"></label><br />
-            <input type="file" class="form-control" asp-for="File" />
-            <span asp-validation-for="File"></span>
-        </div>
-        <div>
-            <label asp-for="ParentCategory"></label><br />
-            <select id="Category" name="ParentCategory">
-                <option></option>
-                @foreach (var categories in ViewBag.Categories)
-                {
-                    <option>
-                        @categories.Name
-                    </option>
+<form method="Post" asp-controller="Categories" asp-action="Edit" enctype="multipart/form-data">
+    <input type="hidden" asp-for="Id" value="@Model.Id" />
+    <div asp-validation-summary="ModelOnly"></div>
+    <div>
+        <label asp-for="Name"></label><br />
+        <input asp-for="Name" value="@Model.Name" />
+        <span asp-validation-for="Name"></span>
+    </div>
+    <div>
+        <label asp-for="Tag"></label><br />
+        <input asp-for="Tag" value="@Model.Tag" />
+        <span asp-validation-for="Tag"></span>
+    </div>
+    <div>
+        <label asp-for="File"></label><br />
+        <input type="file" class="form-control" asp-for="File" />
+        <span asp-validation-for="File"></span>
+    </div>
+    <div>
+        <label asp-for="ParentCategory"></label><br />
+        <select id="Category" name="ParentCategory">
+            <option></option>
+            @foreach (var categories in ViewBag.Categories)
+            {
+                <option>
+                    @categories.Name
+                </option>
 
-                }
-            </select>
-            <span asp-validation-for="ParentCategory"></span>
-        </div>
+            }
+        </select>
+        <span asp-validation-for="ParentCategory"></span>
+    </div>
 
-        <input class="btn btn-success" type="submit" value="Save Changes" />
-    </form>
+    <input class="btn btn-success" type="submit" value="Save Changes" />
+</form>
