--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -1,70 +1,32 @@
 ﻿@model IEnumerable<TestMVC.ViewModels.ProductForDisplayViewModel>
-    <form method="post">
-        <table>
-            <tr>
-                <td>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">₴</span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Price from" name="priceFrom">
-                    </div>
-                </td>
-                <td>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">₴</span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Price to" name="priceTo">
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <! -- сортировка по цене  -->
-                            <div class="input-group-text">
-                                <input type="radio" id="sort1" name="sort" value="0">
-                            </div>
-                            <input type="text" class="form-control" value="По возрастанию цены" disabled>
-                            <div class="input-group-text">
-                                <input type="radio" id="sort2" name="sort" value="1">
-                            </div>
-                            <input type="text" class="form-control" value="По убыванию цены" disabled>
-
-                            <! -- сортировка по имени  -->
-                            <div class="input-group-text">
-                                <input type="radio" id="sort3" name="sort" value="2">
-                            </div>
-                            <input type="text" class="form-control" value="От а до я" disabled>
-                            <div class="input-group-text">
-                                <input type="radio" id="sort4" name="sort" value="3">
-                            </div>
-                            <input type="text" class="form-control" value="От я до а" disabled>                        
-                        </div>  
-                     </div>
-                </td>
-            </tr>
-</table>
-        <input type="submit" value="Применить" />
+@{
+    ViewData["Title"] = "Products";
+}
+@if (this.User.IsInRole("Admin"))
+{
+    <form method="get" asp-controller="Products" asp-action="Create">
+        <input class="btn btn-success" type="submit" value="Create" />
     </form>
-        <table class="table">
-            <tr>
-                <th>Товары</th>
-                <th colspan="2">Цена</th>
-            </tr>
-            @foreach (var product in Model)
-            {
-                <tr>
-                    @await Html.PartialAsync("_ProductPartialView", product)
-                </tr>
-            }
-
-        </table>
-        @if (this.User.IsInRole("Admin"))
-        {
-            <form method="get" asp-controller="Products" asp-action="Create">
-                <input class="btn btn-success" type="submit" value="Создать" />
-            </form>
-        }
+}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-7">
+            @await Html.PartialAsync("_SortPartialView.cshtml")
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-2">
+            @await Html.PartialAsync("_FilterPartialView.cshtml")
+        </div>
+        <div class="col-10">
+            <div class="row">
+                @for (int i = 0; i < @Model.Count(); i++)
+                {
+                    <div class="col-lg-5 col-xl-4">
+                        @await Html.PartialAsync("_ProductPartialView.cshtml", Model.ToArray()[i])
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
