--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestMVC.ViewModels.ProductForDisplayViewModel>
+﻿@model TestMVC.ViewModels.PaginationProductViewModel
 @{
     ViewData["Title"] = "Products";
 }
@@ -8,25 +8,27 @@
         <input class="btn btn-success" type="submit" value="Create" />
     </form>
 }
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-7">
-            @await Html.PartialAsync("_SortPartialView.cshtml")
+<form method="get" asp-controller="Products" asp-action="Index">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-7">
+                @await Html.PartialAsync("_SortPartialView.cshtml", Model)
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-2">
-            @await Html.PartialAsync("_FilterPartialView.cshtml")
-        </div>
-        <div class="col-10">
-            <div class="row">
-                @for (int i = 0; i < @Model.Count(); i++)
-                {
-                    <div class="col-lg-5 col-xl-4">
-                        @await Html.PartialAsync("_ProductPartialView.cshtml", Model.ToArray()[i])
-                    </div>
-                }
+        <div class="row">
+            <div class="col-2">
+                @await Html.PartialAsync("_FilterPartialView.cshtml", Model)
+            </div>
+            <div class="col-10">
+                <div class="row">
+                    @for (int i = 0; i < @Model.ProductArray.Count(); i++)
+                    {
+                        <div class="col-lg-5 col-xl-4">
+                            @await Html.PartialAsync("_ProductPartialView.cshtml", Model.ProductArray[i])
+                        </div>
+                    }
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
