--- a/testMVC/Views/Products/_FilterPartialView.cshtml
+++ b/testMVC/Views/Products/_FilterPartialView.cshtml
@@ -1,13 +1,25 @@
-﻿<div class="input-group mb-3">
+﻿@model TestMVC.ViewModels.PaginationProductViewModel
+
+<div class="input-group mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text">₴</span>
     </div>
-    <input type="text" class="form-control" placeholder="Price from" name="priceFrom">
+    @{string priceFrom = null;}
+    @if (Model.PriceFrom != 0)
+    {
+        priceFrom = Model.PriceFrom.ToString();
+    }
+    <input type="text" class="form-control" placeholder="Price from" name="PriceFrom" value="@priceFrom">
 </div>
 
 <div class="input-group mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text">₴</span>
     </div>
-    <input type="text" class="form-control" placeholder="Price to" name="priceTo">
+    @{string priceTo = null;}
+    @if (Model.PriceTo != 0)
+    {
+        priceTo = Model.PriceTo.ToString();
+    }
+    <input type="text" class="form-control" placeholder="Price to" name="PriceTo" value="@priceTo">
 </div>
