--- a/testMVC/Views/Products/_SortPartialView.cshtml
+++ b/testMVC/Views/Products/_SortPartialView.cshtml
@@ -1,13 +1,21 @@
-﻿<div class="input-group-text">
-    <input type="radio" id="sort1" name="sort" value="1">
+﻿@model TestMVC.ViewModels.PaginationProductViewModel
+
+<div class="input-group-text">
+    @{bool isChecked = Model.Sort == 1;}
+    <input type="radio" id="sort1" name="Sort" value="1" checked="@isChecked">
     <input type="text" class="form-control" value="Prise To Up" disabled>
 
-    <input type="radio" id="sort2" name="sort" value="2">
+    @{isChecked = Model.Sort == 2;}
+    <input type="radio" id="sort2" name="Sort" value="2" checked="@isChecked">
     <input type="text" class="form-control" value="Price To Down" disabled>
 
-    <input type="radio" id="sort3" name="sort" value="3">
+    @{isChecked = Model.Sort == 3;}
+    <input type="radio" id="sort3" name="Sort" value="3" checked="@isChecked">
     <input type="text" class="form-control" value="From a to z" disabled>
 
-    <input type="radio" id="sort4" name="sort" value="4">
+    @{isChecked = Model.Sort == 4;}
+    <input type="radio" id="sort4" name="Sort" value="4" checked="@isChecked">
     <input type="text" class="form-control" value="From z to a" disabled>
+
+    <input class="btn btn-success" type="submit" value="Sort" />
 </div>
