--- a/testMVC/Views/Products/Index.cshtml
+++ b/testMVC/Views/Products/Index.cshtml
@@ -34,17 +34,14 @@
         <div class="row">
             <div class="col">
                 <ul class="pagination justify-content-center">
-                    @{int nextPage = Model.CurrentPage + 1;}
-                    @{int previousPage = Model.CurrentPage - 1;}
+                    <input type="hidden" name="CurrentPage" value="@Model.CurrentPage" />
                     @if (Model.HasPrevious)
                     {
-                        <input type="hidden" name="CurrentPage" value="@previousPage" />
-                        <li class="page-item"><input class="page-link" type="submit" value="Next" /></li>
+                        <li class="page-item"><input class="page-link" type="submit" name='Submit' value="Previous" /></li>
                     }
                     @if (Model.HasNext)
                     {
-                        <input type="hidden" name="CurrentPage" value="@nextPage" />
-                        <li class="page-item"><input class="page-link" type="submit" value="Next" /></li>
+                        <li class="page-item"><input class="page-link" type="submit" name='Submit' value="Next" /></li>
                     }
                 </ul>
             </div>
