--- a/testMVC/Views/Products/_ProductPartialView.cshtml
+++ b/testMVC/Views/Products/_ProductPartialView.cshtml
@@ -1,33 +1,34 @@
 ﻿@model TestMVC.ViewModels.ProductForDisplayViewModel
 <link rel="stylesheet" href="~/css/site.css" />
-<div class="card" style="width: 16rem; height: 25rem;">
+<div class="card" style="width: 16rem; height: 26rem;">
+    @if (this.User.IsInRole("Admin"))
+    {
+        <a style="position : absolute; top:0; left: 0;" class="btn btn-info" asp-area="" asp-controller="Products" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    }
     <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.ImageInByte))">
     <div class="card-body">
         <h5 class="card-title oneLines">@Model.Name</h5>
         <p class="card-text threeLines">@Model.Description</p>
-        
-        <form method="post" asp-controller="Products" asp-action="Buy">
-            <div class="container-fluid buyButton">
-                <div class="row">
-                    <div class="col-11 align-self-center" style="padding: 0;">
-                        <h3 align="center">@Model.Price.ToString("N2")</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-3" style="padding: 0;">
-                        @Html.Hidden("productId", Model.Id)
-                        <button type="submit" class="btn btn-success" style="width:100%">Buy</button>
-                    </div>
-                    <div class="col-4" style="padding: 0; padding-left:20px;">
-                        <select class="form-control" id="exampleFormControlSelect1">
-                            @for (int i = 1; i <= 10; i++)
-                            {
-                                <option>@i</option>
-                            }
-                        </select>
-                    </div>
+
+        <div class="container-fluid buyButton">
+            <div class="row">
+                <div class="col-11 align-self-center" style="padding: 0;">
+                    <h3 align="center">@Model.Price.ToString("N2")</h3>
                 </div>
             </div>
-        </form>
+            <div class="row">
+                <div class="col-3" style="padding: 0;">
+                    <a  style="width:100%" class="btn btn-success" asp-area="" asp-controller="Products" asp-action="Buy" asp-route-productId="@Model.Id">Buy</a>
+                </div>
+                <div class="col-4" style="padding: 0; padding-left:20px;">
+                    <select class="form-control" id="exampleFormControlSelect1">
+                        @for (int i = 1; i <= 10; i++)
+                        {
+                            <option>@i</option>
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
