added editing view

--- a/testMVC/Views/Products/Edit.cshtml
+++ b/testMVC/Views/Products/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TestMVC.ViewModels.ProductViewModel
 @{
-    ViewData["Title"] = "Create new Product";
+    ViewData["Title"] = "Edit Product";
 }
 <form method="Post" asp-controller="Products" asp-action="Create" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly"></div>
